[gd_scene load_steps=15 format=3 uid="uid://dtsgoie3mkpl"]

[ext_resource type="Script" uid="uid://uqvc2km0y0ug" path="res://core/screens/main_menu/main_menu_screen.gd" id="1_evcbt"]
[ext_resource type="Theme" uid="uid://rvggfmuj8l32" path="res://core/screens/main_menu/theme/main_menu_theme.tres" id="1_qnfx7"]
[ext_resource type="Script" uid="uid://0kj2kxfkc6nd" path="res://general/state_machine/state_machine.gd" id="3_qyd2j"]
[ext_resource type="Script" uid="uid://whr7fokn22ln" path="res://core/screens/main_menu/states/start.gd" id="4_l0rnp"]
[ext_resource type="Script" uid="uid://d1xo5ldvmba6y" path="res://core/screens/main_menu/states/info.gd" id="5_8jexh"]
[ext_resource type="Script" uid="uid://x6s85vjo3imo" path="res://core/screens/main_menu/states/credits.gd" id="6_rhbch"]
[ext_resource type="Script" uid="uid://cvepfya520sq" path="res://general/transition_camera.gd" id="7_bxa27"]
[ext_resource type="Script" uid="uid://csne2waqd6x27" path="res://core/screens/main_menu/states/from_start_to_about.gd" id="7_ma8at"]
[ext_resource type="Script" uid="uid://b5k643fvhrvdi" path="res://core/screens/main_menu/states/from_about_to_start.gd" id="8_o83qo"]
[ext_resource type="Script" uid="uid://g1d1vsy7pjgt" path="res://core/screens/main_menu/states/from_about_to_credits.gd" id="9_2l7pg"]
[ext_resource type="Script" uid="uid://lt3nb1j0u64h" path="res://core/screens/main_menu/states/from_credits_to_about.gd" id="10_2l7pg"]
[ext_resource type="Texture2D" uid="uid://df0oro5hgq6fn" path="res://core/screens/main_menu/graphics/circle.svg" id="11_7x0fx"]
[ext_resource type="LabelSettings" uid="uid://cc272esec8t84" path="res://core/screens/main_menu/title_label_settings.tres" id="11_tk1fg"]
[ext_resource type="LabelSettings" uid="uid://b05v8ydlelqai" path="res://core/screens/main_menu/panel_header_label_settings.tres" id="12_7x0fx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qnfx7")
script = ExtResource("1_evcbt")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("_initial_state")]
script = ExtResource("3_qyd2j")
_initial_state = NodePath("Start")
_auto_activate = false
metadata/_custom_type_script = "uid://0kj2kxfkc6nd"

[node name="Start" type="Node" parent="StateMachine"]
script = ExtResource("4_l0rnp")

[node name="About" type="Node" parent="StateMachine"]
script = ExtResource("5_8jexh")

[node name="Credits" type="Node" parent="StateMachine"]
script = ExtResource("6_rhbch")

[node name="FromStartToAbout" type="Node" parent="StateMachine"]
script = ExtResource("7_ma8at")

[node name="FromAboutToStart" type="Node" parent="StateMachine"]
script = ExtResource("8_o83qo")

[node name="FromAboutToCredits" type="Node" parent="StateMachine"]
script = ExtResource("9_2l7pg")

[node name="FromCreditsToAbout" type="Node" parent="StateMachine"]
script = ExtResource("10_2l7pg")

[node name="StaticBackgroundLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="StaticBackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.4, 1)

[node name="ScrollingBackgroundLayer" type="CanvasLayer" parent="."]
layer = -1
offset = Vector2(2000, 2000)
transform = Transform2D(1, 0, 0, 1, 2000, 2000)
follow_viewport_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="ScrollingBackgroundLayer"]
color = Color(0.301961, 0.301961, 0.6, 1)

[node name="Parallax480" type="Parallax2D" parent="ScrollingBackgroundLayer"]
scroll_scale = Vector2(0.8, 0.8)
scroll_offset = Vector2(90, 90)
repeat_size = Vector2(480, 480)
autoscroll = Vector2(20, 20)
repeat_times = 10

[node name="TextureRect" type="TextureRect" parent="ScrollingBackgroundLayer/Parallax480"]
custom_minimum_size = Vector2(240, 240)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7x0fx")
expand_mode = 1

[node name="Parallax240" type="Parallax2D" parent="ScrollingBackgroundLayer"]
scroll_scale = Vector2(0.4, 0.4)
scroll_offset = Vector2(210, 210)
repeat_size = Vector2(240, 240)
autoscroll = Vector2(20, 20)
repeat_times = 20

[node name="TextureRect" type="TextureRect" parent="ScrollingBackgroundLayer/Parallax240"]
custom_minimum_size = Vector2(120, 120)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7x0fx")
expand_mode = 1

[node name="Parallax120" type="Parallax2D" parent="ScrollingBackgroundLayer"]
scroll_scale = Vector2(0.2, 0.2)
scroll_offset = Vector2(30, 30)
repeat_size = Vector2(120, 120)
autoscroll = Vector2(20, 20)
repeat_times = 40

[node name="TextureRect" type="TextureRect" parent="ScrollingBackgroundLayer/Parallax120"]
custom_minimum_size = Vector2(60, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7x0fx")
expand_mode = 1

[node name="Parallax60" type="Parallax2D" parent="ScrollingBackgroundLayer"]
scroll_scale = Vector2(0.1, 0.1)
repeat_size = Vector2(60, 60)
autoscroll = Vector2(20, 20)
repeat_times = 80

[node name="TextureRect" type="TextureRect" parent="ScrollingBackgroundLayer/Parallax60"]
custom_minimum_size = Vector2(30, 30)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7x0fx")
expand_mode = 1

[node name="Parallax30" type="Parallax2D" parent="ScrollingBackgroundLayer"]
scroll_scale = Vector2(0.05, 0.05)
scroll_offset = Vector2(15, 15)
repeat_size = Vector2(30, 30)
autoscroll = Vector2(20, 20)
repeat_times = 160

[node name="TextureRect" type="TextureRect" parent="ScrollingBackgroundLayer/Parallax30"]
custom_minimum_size = Vector2(15, 15)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -7.5
offset_right = 7.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7x0fx")
expand_mode = 1

[node name="TitleFrame" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartCamera" type="Camera2D" parent="TitleFrame"]
unique_name_in_owner = true
anchor_mode = 0

[node name="GameTitle" type="Label" parent="TitleFrame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -167.0
offset_top = 20.0
offset_right = 167.0
offset_bottom = 87.0
grow_horizontal = 2
text = "Super Practica"
label_settings = ExtResource("11_tk1fg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TitleFrame"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -158.0
offset_right = 280.0
offset_bottom = 158.0
grow_vertical = 2
alignment = 2

[node name="TopicsButton" type="Button" parent="TitleFrame/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Play Topics"

[node name="SandboxButton" type="Button" parent="TitleFrame/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
disabled = true
text = "Play Sandbox"

[node name="SettingsButton" type="Button" parent="TitleFrame/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
disabled = true
text = "Settings"

[node name="InfoButton" type="Button" parent="TitleFrame/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Info"

[node name="QuitButton" type="Button" parent="TitleFrame/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Quit"

[node name="AboutFrame" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_top = 2.0
anchor_right = 2.0
anchor_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="AboutCamera" type="Camera2D" parent="AboutFrame"]
unique_name_in_owner = true
anchor_mode = 0
enabled = false

[node name="Buttons" type="HBoxContainer" parent="AboutFrame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
grow_horizontal = 2
alignment = 1

[node name="AboutBackButton" type="Button" parent="AboutFrame/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
text = "Back"

[node name="CreditsButton" type="Button" parent="AboutFrame/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
text = "Credits"

[node name="LicensesButton" type="Button" parent="AboutFrame/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
text = "Licenses"

[node name="Panels" type="HBoxContainer" parent="AboutFrame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LongPanels" type="VBoxContainer" parent="AboutFrame/Panels"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="DisclaimerPanel" type="PanelContainer" parent="AboutFrame/Panels/LongPanels"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AboutFrame/Panels/LongPanels/DisclaimerPanel"]
layout_mode = 2

[node name="DisclaimerHeader" type="Label" parent="AboutFrame/Panels/LongPanels/DisclaimerPanel/VBoxContainer"]
layout_mode = 2
text = "Disclaimer"
label_settings = ExtResource("12_7x0fx")
horizontal_alignment = 1

[node name="DisclaimerText" type="Label" parent="AboutFrame/Panels/LongPanels/DisclaimerPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "This is an early demo release of Super Practica. No promises are made regarding its effectiveness or playability. Major changes and additions are still planned."
horizontal_alignment = 1
autowrap_mode = 2

[node name="WebsitePanel" type="PanelContainer" parent="AboutFrame/Panels/LongPanels"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AboutFrame/Panels/LongPanels/WebsitePanel"]
layout_mode = 2

[node name="WebsiteHeader" type="Label" parent="AboutFrame/Panels/LongPanels/WebsitePanel/VBoxContainer"]
layout_mode = 2
text = "Website"
label_settings = ExtResource("12_7x0fx")
horizontal_alignment = 1

[node name="WebsiteLink" type="LinkButton" parent="AboutFrame/Panels/LongPanels/WebsitePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "(website here)"

[node name="SourcePanel" type="PanelContainer" parent="AboutFrame/Panels/LongPanels"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AboutFrame/Panels/LongPanels/SourcePanel"]
layout_mode = 2

[node name="SourceHeader" type="Label" parent="AboutFrame/Panels/LongPanels/SourcePanel/VBoxContainer"]
layout_mode = 2
text = "Source Code"
label_settings = ExtResource("12_7x0fx")
horizontal_alignment = 1

[node name="SourceLink" type="LinkButton" parent="AboutFrame/Panels/LongPanels/SourcePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "(source here)"

[node name="SourceCommitLink" type="LinkButton" parent="AboutFrame/Panels/LongPanels/SourcePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "(source here)"

[node name="ShortPanels" type="VBoxContainer" parent="AboutFrame/Panels"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VersionPanel" type="PanelContainer" parent="AboutFrame/Panels/ShortPanels"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AboutFrame/Panels/ShortPanels/VersionPanel"]
layout_mode = 2

[node name="VersionHeader" type="Label" parent="AboutFrame/Panels/ShortPanels/VersionPanel/VBoxContainer"]
layout_mode = 2
text = "Version"
label_settings = ExtResource("12_7x0fx")
horizontal_alignment = 1

[node name="VersionText" type="Label" parent="AboutFrame/Panels/ShortPanels/VersionPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "(version here)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CreditsFrame" type="Control" parent="."]
layout_mode = 1
anchor_left = 3.0
anchor_top = 1.0
anchor_right = 4.0
anchor_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsCamera" type="Camera2D" parent="CreditsFrame"]
unique_name_in_owner = true
anchor_mode = 0
enabled = false

[node name="CreditsTitle" type="Label" parent="CreditsFrame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 240.0
offset_top = 20.0
offset_right = -240.0
offset_bottom = 87.0
grow_horizontal = 2
text = "Credits"
label_settings = ExtResource("11_tk1fg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsBackButton" type="Button" parent="CreditsFrame"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
size_flags_horizontal = 6
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsFrame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ContributorsPanel" type="PanelContainer" parent="CreditsFrame/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsFrame/HBoxContainer/ContributorsPanel"]
layout_mode = 2

[node name="ContributorsHeader" type="Label" parent="CreditsFrame/HBoxContainer/ContributorsPanel/VBoxContainer"]
layout_mode = 2
text = "Contributors"
label_settings = ExtResource("12_7x0fx")
horizontal_alignment = 1

[node name="Contributors" type="Label" parent="CreditsFrame/HBoxContainer/ContributorsPanel/VBoxContainer"]
layout_mode = 2
text = "Svetogam"
horizontal_alignment = 1

[node name="FundersPanel" type="PanelContainer" parent="CreditsFrame/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsFrame/HBoxContainer/FundersPanel"]
layout_mode = 2

[node name="FundersHeader" type="Label" parent="CreditsFrame/HBoxContainer/FundersPanel/VBoxContainer"]
layout_mode = 2
text = "Funders"
label_settings = ExtResource("12_7x0fx")
horizontal_alignment = 1

[node name="Funders" type="Label" parent="CreditsFrame/HBoxContainer/FundersPanel/VBoxContainer"]
layout_mode = 2
text = "Oops! There's no one here yet!"
horizontal_alignment = 1

[node name="TransitionCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0
enabled = false
script = ExtResource("7_bxa27")
duration = 0.4
position_trans = 4
position_ease = 1
